# rtp-llm

./: .bazelrc  BUILD  MODULE.bazel  WORKSPACE
bazel/: arch_select.bzl
rtp_llm/: BUILD
rtp_llm/cpp/devices/rocm_impl/: BUILD  ROCmActOp.cc  ROCmAttentionOp.cc  ROCmDevice.cc  ROCmDevice.h  ROCmDistributedOp.cc  ROCmFfnLayer.cc  ROCmGemmOp.cc  ROCmLayernorm.cc  ROCmQuantizeOp.cc  aiterPA.h
rtp_llm/cpp/devices/rocm_impl/test/: BUILD
rtp_llm/cpp/models/: GptModel.cc
rtp_llm/cpp/rocm/: BUILD  rocmFmhaWrapper.cc  rocmMoeWrapper.cc
rtp_llm/cpp/rocm/custom_ar/: custom_ar_comm.h
rtp_llm/libs/: BUILD
